SCSS Styles added, bg color and responsive img.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:ital,wght@0,400;1,600&display=swap");
+img {
+  max-width: 100%;
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  background-color: #674baf;
 }
 /*# sourceMappingURL=styles.css.map */
