--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,8 @@
-@import 'variables';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:ital,wght@0,400;1,600&display=swap');
+@import 'variables';
+@import 'header';
+@import 'main';
+@import 'footer';
 
 *, *::after, *::before {
     margin: 0;
@@ -8,5 +11,5 @@
 }
 
 body {
-
+    background-color: $clr-violet;
 }
