--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,5 +11,12 @@
 }
 
 body {
-    background-color: $clr-violet;
+    background: url('/images/bg-mobile.svg') no-repeat, $clr-violet;
+    color: white;
+    text-align: center;
+}
+
+header, main, footer {
+    max-width: 80%;
+    margin: auto;
 }
