--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,3 +1,31 @@
-img {
-    max-width: 100%;
+main {
+    img {
+        max-width: 100%;    
+    }
+    h1 {
+        font-size: 1.6em;
+        font-weight: bold;
+        margin-top: 3em;
+    }
+    p {
+        margin-top: 1em;
+        opacity: 0.8;
+    }
+    button {
+        outline: none;
+        border: none;
+
+        border-radius: 2em;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+        margin-top: 2em;
+        padding: 1em 6em;
+
+        font-family: 'Open Sans', sans-serif;
+        color: $clr-violet;
+        &:hover {
+            background-color: $clr-soft-magenta;
+            color: white;
+        }
+    }
 }
