--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,8 +8,36 @@ header img {
   margin: 5vh 0 9vh 0;
 }
 
-img {
+main img {
   max-width: 100%;
+}
+
+main h1 {
+  font-size: 1.6em;
+  font-weight: bold;
+  margin-top: 3em;
+}
+
+main p {
+  margin-top: 1em;
+  opacity: 0.8;
+}
+
+main button {
+  outline: none;
+  border: none;
+  border-radius: 2em;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+          box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  margin-top: 2em;
+  padding: 1em 6em;
+  font-family: 'Open Sans', sans-serif;
+  color: #674baf;
+}
+
+main button:hover {
+  background-color: #e882e8;
+  color: white;
 }
 
 *, *::after, *::before {
@@ -23,10 +51,15 @@ body {
   background: url("/images/bg-mobile.svg") no-repeat, #674baf;
   color: white;
   text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
 
 header, main, footer {
   max-width: 80%;
   margin: auto;
+}
+
+h1 {
+  font-family: 'Poppins', sans-serif;
 }
 /*# sourceMappingURL=styles.css.map */
