--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -23,9 +23,34 @@ main {
 
         font-family: 'Open Sans', sans-serif;
         color: $clr-violet;
+
+        cursor: pointer;
         &:hover {
             background-color: $clr-soft-magenta;
             color: white;
+        }
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    main {
+        display: flex;
+        justify-content: center;
+        gap: 4em;
+        text-align: left;
+        section:first-child {
+            width: 150%;
+        }
+        h1 {
+            font-size: 2.3em;
+            margin-top: 1em;
+        }
+        p {
+            font-size: 1em;
+        }
+        button {
+            padding: 1em 4em;
+            font-size: 1em;
         }
     }
 }
