Header fixed for desktop.

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,7 +1,8 @@
 header {
     text-align: left;
     img {
-        width: 40%;
+        width: 50%;
+        max-width: 200px;
         margin: 5vh 0 9vh 0;
     }
 }
